@@ -1001,10 +1001,12 @@ if __name__ == '__main__':
     LOG.info("irkerd version %s" % version)
     if args.immediate:
         if not args.message:
-            LOG.error(
-                '--immediate set (%r), but message argument not given' % (
-                args.immediate))
-            raise SystemExit(1)
+            # We want newline to become '\n' and tab to become '\t';
+            # the JSON decoder will undo these transformations.
+            # This will also encode backslash, backspace, formfeed,
+            # and high-half characters, which might produce unexpected
+            # results on output.
+            args.message = sys.stdin.read().encode("string_escape") 
         irker.irc.add_event_handler("quit", lambda _c, _e: sys.exit(0))
         irker.handle('{"to":"%s","privmsg":"%s"}' % (
             args.immediate, args.message), quit_after=True)
