@@ -185,9 +185,11 @@ authenticate the nick on receipt of a welcome message.</para></listitem>
 </varlistentry>
 <varlistentry>
 <term>-i</term>
-<listitem><para>Immediate mode, to be run in foreground. Takes two
-following values interpreted as a channel URL and a message
-string. Sends the message, then quits.</para></listitem>
+<listitem><para>Immediate mode, to be run in foreground. Takes a following
+following value interpreted as a channel URL. May take a second
+argument giving a message string; if the sedond argument is absent the
+message is read from standard input (and may contain newlines). 
+Sends the message, then quits.</para></listitem>
 </varlistentry>
 <varlistentry>
 <term>-V</term>
